# cmd2

./: .appveyor.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .readthedocs.yaml  .travis.yml  .typos.toml  AutoCompleter.py  CHANGELOG.md  CHANGES.md  CHANGES.rst  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  INSTALL.txt  LICENSE  MANIFEST.in  MANIFEST.in.donotuse  Makefile  NEWS.txt  Pipfile  README.md  README.rst  README.txt  SHLEX_TODO.txt  __init__.py  azure-pipelines.yml  bootstrap.py  buildout.cfg  cmd2.py  codecov.yml  fabfile.py  flagReader.py  flatten_lines.py  ignoreBug.py  main.py  mkdocs.yml  (+12 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  doc.yml  docs.yml  format.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml  lint.yml  mypy.yml  quality.yml  tests.yml  typecheck.yml
catherine/table/: sites.sql
cmd2/: AutoCompleter.py  __init__.py  annotated.py  ansi.py  argcomplete_bridge.py  argparse_completer.py  argparse_custom.py  argparse_utils.py  clipboard.py  cmd2.py  colors.py  command_definition.py  command_set.py  completion.py  constants.py  decorators.py  exampleSession.txt  exceptions.py  history.py  parsing.py  plugin.py  pt_utils.py  py_bridge.py  pyscript_bridge.py  rich_utils.py  rl_utils.py  string_utils.py  styles.py  submenu.py  table_creator.py  terminal_utils.py  theme.py  transcript.py  typer_custom.py  types.py  utils.py
cmd2/example/: example.py
debian/: changelog  control  rules
docs/: Makefile  alternatives.rst  argument_processing.rst  conf.py  copyright.rst  doc_conventions.md  doc_conventions.rst  freefeatures.rst  hooks.rst  index.md  index.rst  install.rst  integrating.rst  make.bat  overview.rst  refresh.bash  refresh_pycon.bash  requirements.txt  settingchanges.rst  testing.md  testing.rst  transcript.rst  unfreefeatures.rst  upgrades.md  upload_pycon.bash
docs/api/: annotated.md  ansi.md  ansi.rst  argparse_completer.md  argparse_completer.rst  argparse_custom.md  argparse_custom.rst  argparse_utils.md  clipboard.md  cmd.md  cmd.rst  colors.md  command_definition.md  command_definition.rst  command_set.md  completion.md  constants.md  constants.rst  decorators.md  decorators.rst  exceptions.md  exceptions.rst  history.md  history.rst  index.md  index.rst  parsing.md  parsing.rst  plugin.md  plugin.rst  plugin_external_test.md  plugin_external_test.rst  pt_utils.md  py_bridge.md  py_bridge.rst  rich_utils.md  rl_utils.md  string_utils.md  styles.md  table_creator.md  (+8 more)
docs/examples/: alternate_event_loops.md  alternate_event_loops.rst  example.rst  examples.md  first_app.md  first_app.rst  getting_started.md  index.md  index.rst  quickstart.rst  remove_builtin_commands.rst  removing_builtin_commands.rst
docs/features/: annotated.md  argument_processing.md  argument_processing.rst  async_commands.md  builtin_commands.md  builtin_commands.rst  clipboard.md  clipboard.rst  commands.md  commands.rst  completion.md  completion.rst  disable_commands.md  disable_commands.rst  embedded_python_shells.md  embedded_python_shells.rst  generating_output.md  generating_output.rst  help.md  help.rst  history.md  history.rst  hooks.md  hooks.rst  index.md  index.rst  initialization.md  initialization.rst  misc.md  misc.rst  modular_commands.md  modular_commands.rst  multiline.rst  multiline_commands.md  multiline_commands.rst  os.md  os.rst  packaging.md  packaging.rst  plugins.md  (+21 more)
docs/javascripts/: readthedocs.js
docs/migrating/: free_features.rst  incompatibilities.md  incompatibilities.rst  index.md  index.rst  minimum.md  minimum.rst  next_steps.md  next_steps.rst  nextsteps.rst  summary.rst  why.md  why.rst
docs/mixins/: index.md  mixin_template.md
docs/overrides/: main.html
docs/overview/: alternatives.md  alternatives.rst  featuretour.rst  index.md  index.rst  installation.md  installation.rst  integrating.md  integrating.rst  resources.md  resources.rst  summary.rst
example/: ex2.test  example.py  exampleSession.txt
examples/: .cmd2rc  README.md  alias_startup.py  annotated_example.py  arg_decorators.py  arg_print.py  arg_printer.py  arglist_example.py  argparse_completion.py  argparse_example.py  async_call.py  async_commands.py  async_printing.py  bash_completion.py  basic.py  basic_completion.py  case_sensitive.py  cmd_as_argument.py  color.py  colors.py  command_sets.py  completion_item_choices.py  custom_parser.py  custom_types.py  decorator_example.py  default_categories.py  dynamic_commands.py  environment.py  event_loops.py  example.py  exampleSession.txt  exit_code.py  first_app.py  getting_started.py  hello_cmd2.py  help_categories.py  hooks.py  initialization.py  migrating.py  mixin.py  (+34 more)
plugins/: README.txt  tasks.py
plugins/ext_test/: CHANGELOG.md  README.md  build-pyenvs.sh  noxfile.py  pyproject.toml  setup.py  tasks.py
plugins/ext_test/cmd2_ext_test/: __init__.py  cmd2_ext_test.py  pylintrc
plugins/ext_test/examples/: example.py
plugins/ext_test/tests/: test_ext_test.py
readme_files/: shout_out.csv  shoutout.txt
scripts/: validate_tag.py
tests/: __init__.py  conftest.py  relative_multiple.txt  script.py  script.txt  test_acargparse.py  test_annotated.py  test_ansi.py  test_argparse.py  test_argparse_completer.py  test_argparse_custom.py  test_argparse_subcommands.py  test_argparse_utils.py  test_async_alert.py  test_autocompletion.py  test_bashcompletion.py  test_categories.py  test_cmd2.py  test_commandset.py  test_completion.py  test_custom_key_binding.py  test_docs.py  test_dynamic_complete_style.py  test_future_annotations.py  test_history.py  test_no_future_annotations.py  test_parsing.py  test_plugin.py  test_plyparsing.py  test_pt_utils.py  test_py_completion.py  test_pyscript.py  test_rich_utils.py  test_run_pyscript.py  test_shlexparsing.py  test_string_utils.py  test_submenu.py  test_table_creator.py  test_terminal_utils.py  test_theme.py  (+6 more)
tests_isolated/: conftest.py
(+144 files in other folders)
