[build-system]
requires = ["build>=1.2.2", "setuptools>=80.7.1", "setuptools-scm>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cmd2"
dynamic = ["version"]
description = "cmd2 - quickly build feature-rich and user-friendly interactive command line applications in Python"
authors = [{ name = "cmd2 Contributors" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["CLI", "cmd", "command", "interactive", "prompt", "Python"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Free Threading :: 3 - Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "backports.strenum; python_version == '3.10'",
    "gnureadline>=8; platform_system == 'Darwin'",
    "pyperclip>=1.8.2",
    "pyreadline3>=3.4; platform_system == 'Windows'",
    "rich>=14.1.0",
    "rich-argparse>=1.7.1",
]

[dependency-groups]
build = ["build>=1.2.2", "setuptools>=80.7.1", "setuptools-scm>=9.2"]
dev = [
    "black>=25",
    "codecov>=2.1",
    "invoke>=2.2.1",
    "ipython>=8.23",
    "mkdocs-git-revision-date-localized-plugin>=1.5",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1",
    "mypy>=1.13",
    "pre-commit>=3",
    "pytest>=8.1.1",
    "pytest-cov>=5",
    "pytest-mock>=3.14.1",
    "ruff>=0.14.10",
    "uv-publish>=1.3",
]
docs = [
    "black>=25",
    "mkdocs-git-revision-date-localized-plugin>=1.5",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1",
    "setuptools>=80.7.1",
    "setuptools_scm>=8",
]
quality = ["pre-commit>=3"]
test = [
    "codecov>=2.1",
    "coverage>=7.11",
    "pytest>=8.1.1",
    "pytest-cov>=5",
    "pytest-mock>=3.14.1",
]
validate = ["mypy>=1.13", "ruff>=0.14.10", "types-setuptools>=80.7.1"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
exclude = [
    "^.git/",
    "^.venv/",
    "^build/",        # .build directory
    "^docs/",         # docs directory
    "^dist/",
    "^examples/",     # examples directory
    "^noxfile\\.py$", # nox config file
    "setup\\.py$",    # any files named setup.py
    "^site/",
    "^tasks\\.py$",   # tasks.py invoke config file
    "^tests/",        # tests directory
]
files = ['.']
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=cmd2",
    "--cov-append",
    "--cov-report=term",
    "--cov-report=html",
]

[tool.setuptools]
packages = ["cmd2"]

[tool.setuptools_scm]

[tool.uv]
default-groups = ["build", "dev"]
